canada flag is accessible

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 <main>
-    <section class="red"></section>
-    <section class="white">
-        <img src="./assets/images/maple-leaf.svg">
+    <section tabindex="0" aria-label="A left red band is used to symbolize prosperity and hope" class="red"></section>
+    <section tabindex="0" aria-label="A center white band is used to reflect the impartiality of the nation, while also representing peace and tranquility" class="white">
+        <img src="./assets/images/maple-leaf.svg" alt="An 11-pointed red maple leaf centered in the middle of the white band representing the culture heritage of Canada and the vast natural resources found within its borders.">
     </section>
-    <section class="red"></section>
+    <section tabindex="0" aria-label="A right red band is used to symbolize prosperity and hope" class="red"></section>
 </main>
 </body>
 </html>
